--- a/templates/resume.html
+++ b/templates/resume.html
@@ -1,6 +1,6 @@
   {% extends "templates/base.html" %}
 {% block content %}
-<link rel = "stylesheet" type="text/css" href="static/resume.css">
+<link rel = "stylesheet" property='stylesheet' type="text/css" href="static/resume.css">
 <div class="container">
     <div>
         <h1>EDUCATION</h1>
