--- a/static/base.css
+++ b/static/base.css
@@ -6,6 +6,10 @@ span > .title {
 	color: white;
 
 }
+audio{
+	width: 180px;
+	/*margin-right: 10px;*/
+}
 .mobileView{
 	display:none;
 }
@@ -87,6 +91,9 @@ span > .title {
 .icon{
 	display: inline-block;
 	/*margin-bottom: 0px;*/
+}
+.nav-pills >li {
+	color: white;
 }
 
 @media (max-width: 760px){
@@ -188,16 +195,16 @@ span > .title {
 		position: absolute;
 		display: block;
 		text-align: center;
-		margin-left: 20px;
+		margin-left: 3%;
 	}
 	.socialIcons > .icon{
 		display: block;
-		margin: 8px;
+		margin: 2px;
 	}
 	.copyright > p{
 		display: block;
 		position: relative;
-		margin-top: 240px;
+		margin-top: 100%;
 		bottom: 20px;
 		left: 2px;
 		color:#AFB6B6;
