--- a/templates/base.html
+++ b/templates/base.html
@@ -90,10 +90,8 @@
 				{% endfor %}
 				<li>
 					<audio autoplay="" controls="" loop="" preload="">
-			 <source src="/static/music.mp3" type="audio/ogg"></source>
-			 <source src="/static/music.mp3" type="audio/mpeg"></source>
-			 Your browser does not support the audio element.
-			</audio>
+			 		<source src="/static/music.mp3" type="audio/ogg"><!-- </source> -->
+					</audio>
 				</li>
 				</ul>
 			</div>
@@ -133,16 +131,16 @@
 			</div>
 			<div class="socialIcons">
 				<div class="icon">
-					<a href="#" class="icon-button instagram"><i class="fa fa-instagram"></i><span></span></a>
+					<a href="https://www.instagram.com/" class="icon-button instagram"><i class="fa fa-instagram">.</i><span> </span></a>
 				</div>
 				<div class="icon">
-					<a href="http://weibo.com/u/2255731994/home?topnav=1&wvr=6" class="icon-button weibo"><i class="fa fa-weibo"></i><span></span></a>
+					<a href="http://weibo.com/u/2255731994/home?topnav=1&wvr=6" class="icon-button weibo"><i class="fa fa-weibo">.</i><span> </span></a>
 				</div>
 				<div class="icon">
-					<a href="https://github.com/MengtianXu/539_Portfolio" class="icon-button github"><i class="fa fa-github"></i><span></span></a>
+					<a href="https://github.com/MengtianXu/539_Portfolio" class="icon-button github"><i class="fa fa-github">.</i><span></span> </a>
 				</div>
 				<div class="icon">
-					<a href="https://www.facebook.com/home.php?ref=wizard" class="icon-button facebook"><i class="fa fa-facebook"></i><span></span></a>
+					<a href="https://www.facebook.com/home.php?ref=wizard" class="icon-button facebook"><i class="fa fa-facebook">.</i><span> </span></a>
 				</div>
 			</div>
 			<div class="copyright">
