--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -3,7 +3,7 @@
 {% block content %} 
 	{{hint}}
 
-<link rel = "stylesheet" type="text/css" href="static/index.css">
+<link rel = "stylesheet" property='stylesheet' type="text/css" href="static/index.css">
 <div class="container">
 
     <ul class="timeline">
